--- a/react/02-es6-for-react-new-array-methods.html
+++ b/react/02-es6-for-react-new-array-methods.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>01. ES6 for React</title>
+  <title>02. ES6 for React: New Array Methods</title>
 </head>
 <body>
-  <h1>01. ES6 for React</h1>
+  <h1>02. ES6 for React: New Array Methods</h1>
 
-  <script src="01-es6-for-react.js"></script>
+  <script src="02-es6-for-react-new-array-methods.js"></script>
 </body>
 </html>
