--- a/react/08-ecommerce-store/public/index.html
+++ b/react/08-ecommerce-store/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <title>Ecommerce Store</title>
   </head>
   <body>
     <div id="root"></div>
