a tag and img tag

--- a/html/day-01-03.html
+++ b/html/day-01-03.html
@@ -11,6 +11,7 @@
     </style>
 	</head>
 	<body>
+    <a href="day-01-04.html">Go Back</a>
     <p>Paragraph 1</p>
     <p>Paragraph 2</p>
     <p>Paragraph 3</p>
