tables example added

--- a/html/day-01-09-tables.html
+++ b/html/day-01-09-tables.html
@@ -4,5 +4,49 @@
     <title>Tables</title>
   </head>
   <body>
+    <table border="1">
+      <caption>Students</caption>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Score</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Ajay</td>
+          <td>ajay@email.com</td>
+          <td>90</td>
+          <td>
+            <button>Edit</button>
+            <button>Delete</button>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Ram</td>
+          <td>ram@email.com</td>
+          <td>75</td>
+          <td>
+            <button>Edit</button>
+            <button>Delete</button>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Pinky</td>
+          <td>pinky@email.com</td>
+          <td>90</td>
+          <td>
+            <button>Edit</button>
+            <button>Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
