--- a/html/day-01-09-periodic-table.html
+++ b/html/day-01-09-periodic-table.html
@@ -7,37 +7,13 @@
   <table border="1">
     <tr>
       <td>H</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td colspan="16"></td>
       <td>He</td>
     </tr>
     <tr>
       <td>Li</td>
       <td>Be</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td colspan="10"></td>
       <td>B</td>
       <td>C</td>
       <td>N</td>
@@ -46,164 +22,134 @@
       <td>Ne</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>Na</td>
+      <td>Mg</td>
+      <td colspan="10"></td>
+      <td>Al</td>
+      <td>Si</td>
+      <td>P</td>
+      <td>S</td>
+      <td>Cl</td>
+      <td>Ar</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>K</td>
+      <td>Ca</td>
+      <td>Sc</td>
+      <td>Ti</td>
+      <td>V</td>
+      <td>Cr</td>
+      <td>Mn</td>
+      <td>Fe</td>
+      <td>Co</td>
+      <td>Ni</td>
+      <td>Cu</td>
+      <td>Zn</td>
+      <td>Ga</td>
+      <td>Ge</td>
+      <td>As</td>
+      <td>Se</td>
+      <td>Br</td>
+      <td>Kr</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>Rb</td>
+      <td>Sr</td>
+      <td>Y</td>
+      <td>Zr</td>
+      <td>Nb</td>
+      <td>Mo</td>
+      <td>Tc</td>
+      <td>Ru</td>
+      <td>Rh</td>
+      <td>Pd</td>
+      <td>Ag</td>
+      <td>Cd</td>
+      <td>In</td>
+      <td>Sn</td>
+      <td>Sb</td>
+      <td>Te</td>
+      <td>I</td>
+      <td>Xe</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>CS</td>
+      <td>Ba</td>
+      <td>Lu</td>
+      <td>Hf</td>
+      <td>Ta</td>
+      <td>W</td>
+      <td>Re</td>
+      <td>Os</td>
+      <td>Ir</td>
+      <td>Pt</td>
+      <td>Au</td>
+      <td>Hg</td>
+      <td>Tl</td>
+      <td>Pb</td>
+      <td>Bi</td>
+      <td>Po</td>
+      <td>At</td>
+      <td>Rn</td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>Fr</td>
+      <td>Ra</td>
+      <td>Lr</td>
+      <td>Rf</td>
+      <td>Db</td>
+      <td>Sg</td>
+      <td>Bh</td>
+      <td>Hs</td>
+      <td>Mt</td>
+      <td>Ds</td>
+      <td>Rg</td>
+      <td>Cn</td>
+      <td>Uut</td>
+      <td>Fi</td>
+      <td>Uup</td>
+      <td>Lv</td>
+      <td>Uus</td>
+      <td>Uuo</td>
+    </tr>
+    <tr height="28px">
+      <td colspan="18"></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td colspan="2"></td>
+      <td>La</td>
+      <td>Ce</td>
+      <td>Pr</td>
+      <td>Nd</td>
+      <td>Pm</td>
+      <td>Sm</td>
+      <td>Eu</td>
+      <td>Gd</td>
+      <td>Tb</td>
+      <td>Dy</td>
+      <td>Ho</td>
+      <td>Er</td>
+      <td>Tm</td>
+      <td>Yb</td>
+      <td colspan="2"></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td colspan="2"></td>
+      <td>Ac</td>
+      <td>Th</td>
+      <td>Pa</td>
+      <td>U</td>
+      <td>Np</td>
+      <td>Pu</td>
+      <td>Am</td>
+      <td>Cm</td>
+      <td>Bk</td>
+      <td>Cf</td>
+      <td>Es</td>
+      <td>Fm</td>
+      <td>Md</td>
+      <td>No</td>
+      <td colspan="2"></td>
     </tr>
   </table>
 </body>
