--- a/html/day-01-10-forms.html
+++ b/html/day-01-10-forms.html
@@ -50,6 +50,21 @@
 
     <br>
     <br>
+
+    <input list="statesList">
+    <datalist id="statesList">
+      <option>J & K</option>
+      <option>Punjab</option>
+      <option>UP</option>
+      <option>Rajasthan</option>
+      <option>Karnataka</option>
+      <option>Maharashtra</option>
+      <option>Telangana</option>
+      <option>Tamilnadu</option>      
+    </datalist>
+
+    <br>
+    <br>
     <label for="states">Select State:</label>
     <select id="states">
       <optgroup label="States">
