--- a/css/day-01-27-background-images.html
+++ b/css/day-01-27-background-images.html
@@ -26,8 +26,10 @@
       padding: 30px;
       border: 20px solid rgba(0, 255, 0, 0.7);
       /* overflow: auto; */
+      /* width: 100%; */
+      /* box-sizing: border-box; */
 
-      height: 40vh;
+      height: 50vh;
 
       background-color: orange;
       
