--- a/js/01-30-how-do-add-js.html
+++ b/js/01-30-how-do-add-js.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Intro to JS</title>
+		<title>How to add JS</title>
 	</head>
 	<body>
 		<!-- inline js -->
