--- a/js/01-30-js-intro.html
+++ b/js/01-30-js-intro.html
@@ -12,6 +12,7 @@
 		<script>
 			document.getElementById("mainHeading").innerHTML = "New Heading";
 			document.getElementById("mainHeading").style.fontSize = "15px";
+			// document.body.style.backgroundColor = red;
 			document.getElementById("mainHeading").title = "New Heading Title";
 		</script>
 	</body>
