--- a/js/01-30-js-intro.html
+++ b/js/01-30-js-intro.html
@@ -14,6 +14,12 @@
 			document.getElementById("mainHeading").style.fontSize = "15px";
 			// document.body.style.backgroundColor = red;
 			document.getElementById("mainHeading").title = "New Heading Title";
+
+			// VARIABLES
+			// var myHeading = document.getElementById("mainHeading");
+			// myHeading.innerHTML = "New Heading";
+			// myHeading.style.fontSize = "15px";
+			// myHeading.title = "New Heading Title";
 		</script>
 	</body>
 </html>
