--- a/js/01-30-js-intro.html
+++ b/js/01-30-js-intro.html
@@ -11,9 +11,11 @@
 
 		<script>
 			document.getElementById("mainHeading").innerHTML = "New Heading";
-			document.getElementById("mainHeading").style.fontSize = "15px";
-			// document.body.style.backgroundColor = red;
+			document.getElementById("mainHeading").style.color = "red";
 			document.getElementById("mainHeading").title = "New Heading Title";
+			
+			document.body.style.backgroundColor = "grey";
+			document.title = "Power of JS!!!";
 
 			// VARIABLES
 			// var myHeading = document.getElementById("mainHeading");
