--- a/js/js-practice-02-toggle-theme/index.html
+++ b/js/js-practice-02-toggle-theme/index.html
@@ -32,32 +32,6 @@
 			libero architecto perferendis!
 		</p>
 
-		<script>
-			// IMPORTANT
-			// Write and practice this code 3-5 times ATLEAST
-			// IMPORTANT
-
-			// variables
-			var btn = document.getElementById("btn");
-			var activeTheme = "light";
-
-			// function definition
-			function toggleTheme() {
-				if (activeTheme == "dark") {
-					document.body.style.backgroundColor = "white";
-					document.body.style.color = "grey";
-					btn.innerText = "Switch to Dark Theme";
-					activeTheme = "light";
-				} else {
-					document.body.style.backgroundColor = "black";
-					document.body.style.color = "white";
-					btn.innerText = "Switch to Light Theme";
-					activeTheme = "dark";
-				}
-			}
-
-			// event listener
-			btn.addEventListener("click", toggleTheme);
-		</script>
+		<script src="script.js"></script>
 	</body>
 </html>
