--- a/js/js-practice-02-toggle-theme/index.html
+++ b/js/js-practice-02-toggle-theme/index.html
@@ -5,17 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Toggle Theme</title>
-		<style>
-			body {
-				color: grey;
-			}
-		</style>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<button id="btn">Switch to Dark Theme</button>
-
 		<hr />
-
 		<h1>Heading 1</h1>
 		<h2>Heading 2</h2>
 		<p>
