--- a/js/02-07-practice.html
+++ b/js/02-07-practice.html
@@ -45,7 +45,8 @@
     for(let i = 0; i < n.length; i++) {
       output += '<table border="1">';
       for(let j = 1; j < 11; j++) {
-        output += "<tr><td>" + n[i]  + " * " +  j + " = " + n[i] * j + "</td></tr>";
+        // output += "<tr><td>" + n[i]  + " * " +  j + " = " + n[i] * j + "</td></tr>";
+        output += `<tr><td> ${n[i]}  * ${j} = ${n[i]} * ${j} </td></tr>`;
       }
       output += '</table>';
     }
