--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - Rakesh Portfolio</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;800&display=swap" rel="stylesheet">  
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-  />
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <div class="container flex">
-      <a href="#"><img src="rakesh.jpg" alt="Rakesh"></a>
-      <nav>
-        <a href="index.html">Projects</a>
-        <a href="about.html">About</a>
-        <!-- replace png file with pdf file -->
-        <a download="rakesh-resume.png" href="cv.png" ><i class="fa-solid fa-download"></i> Resume</a>
-      </nav>
-    </div>
-  </header>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Projects - Rakesh Portfolio</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;800&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+		/>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<header>
+			<div class="container flex">
+				<a href="index.html"><img src="img/icon/rakesh.jpg" alt="Rakesh" /></a>
+				<nav>
+					<a href="index.html" class="active">Projects</a>
+					<a href="about.html">About</a>
+					<a href="rakesh-resume.pdf"
+						>Resume
+						<a download="rakesh-resume.pdf" href="rakesh-resume.pdf"
+							><i class="fa-solid fa-download"></i></a
+					></a>
+				</nav>
+			</div>
+		</header>
 
-  <main>
-    <div class="container">
-      <ul class="filters">
-        <li class="active">All</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JS</li>
-        <li>Photoshop</li>
-        <li>Illustrator</li>
-      </ul>
-      <div class="projects flex" id="projects">
-      </div>
-    </div>
-  </main>
+		<main>
+			<div class="container">
+				<ul class="filters">
+					<li class="active">All</li>
+					<li>HTML</li>
+					<li>CSS</li>
+					<li>JS</li>
+					<li>Photoshop</li>
+					<li>Illustrator</li>
+				</ul>
+				<div class="projects flex" id="projects"></div>
+			</div>
+		</main>
 
-  <footer>
-    <div class="container">
-      Made with 💖 & 🍵 in Bangalore - <span id="year">2001</span>
-    </div>
-  </footer>
+		<footer>
+			<div class="container">Made with 💖 & 🍵 in Bangalore - <span id="year">2001</span></div>
+		</footer>
 
-  <script src="script.js"></script>
-</body>
+		<script src="script.js"></script>
+	</body>
 </html>
