--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,9 +20,9 @@
 	<body>
 		<header>
 			<div class="container flex">
-				<a href="index.html"><img src="img/icon/rakesh.jpg" alt="Rakesh" /></a>
+				<a href="/"><img src="img/icon/rakesh.jpg" alt="Rakesh" /></a>
 				<nav>
-					<a href="index.html" class="active">Projects</a>
+					<a href="/" class="active">Projects</a>
 					<a href="about.html">About</a>
 					<a href="rakesh-resume.pdf"
 						>Resume
