--- a/js/demo.html
+++ b/js/demo.html
@@ -8,21 +8,25 @@
 </head>
 <body>
   <script>
-    // console.log()
-    // document.
+    // console.log(1 + 2); // 3
+    // console.log(1 + "2"); // 12
+    // console.log(true + false); // 1
+    // console.log(true + true); // 2
+    // console.log(false + false); // 0
+    // console.log(true + "false"); // truefalse
+    // console.log(1 + "false"); // 1false
 
-    var stds = [
-      {
-        name: "Akash",
-        marks: 80
-      },
-      {
-        name: "Bhim",
-        marks: 90
-      },
-    ]
+    function sum(a, b) {
+      console.log(a + b);
+    }
 
-    stds[0].name
+    sum(1, 3);
+
+    function sum(a, b) {
+      return a + b;
+    }
+
+    console.log(sum(1, 3));
   </script>
 </script>
 </body>
