--- a/js/demo.html
+++ b/js/demo.html
@@ -7,7 +7,21 @@
   <title>Assignment</title>
 </head>
 <body>
+  <div id="userInfo">
+    <h1>User Info</h1>
+  </div>
   <script>
+    const userInfo = document.getElementById('userInfo')
+
+    // var email = '<p>rakesh@edyoda.com</p>'
+    // userInfo.innerHTML += email;
+
+    var pTag = document.createElement('p'); // <p></p>
+    var text = document.createTextNode('rakesh@edyoda.com'); 'rakesh@edyoda.com'
+    pTag.append(text); // <p>rakesh@edyoda.com</p>
+    userInfo.append(pTag);
+    // console.log(pTag)
+
     // console.log(1 + 2); // 3
     // console.log(1 + "2"); // 12
     // console.log(true + false); // 1
@@ -16,17 +30,19 @@
     // console.log(true + "false"); // truefalse
     // console.log(1 + "false"); // 1false
 
-    function sum(a, b) {
-      console.log(a + b);
-    }
+    // function sum(a, b) {
+    //   console.log(a + b);
+    // }
 
-    sum(1, 3);
+    // sum(1, 3);
 
-    function sum(a, b) {
-      return a + b;
-    }
+    // function sum(a, b) {
+    //   return a + b;
+    // }
 
-    console.log(sum(1, 3));
+    // console.log(sum(1, 3));
+
+    
   </script>
 </script>
 </body>
