--- a/js/demo.html
+++ b/js/demo.html
@@ -11,15 +11,15 @@
     <h1>User Info</h1>
   </div>
   <script>
-    const userInfo = document.getElementById('userInfo')
+    // const userInfo = document.getElementById('userInfo')
 
     // var email = '<p>rakesh@edyoda.com</p>'
     // userInfo.innerHTML += email;
 
-    var pTag = document.createElement('p'); // <p></p>
-    var text = document.createTextNode('rakesh@edyoda.com'); 'rakesh@edyoda.com'
-    pTag.append(text); // <p>rakesh@edyoda.com</p>
-    userInfo.append(pTag);
+    // var pTag = document.createElement('p'); // <p></p>
+    // var text = document.createTextNode('rakesh@edyoda.com'); 'rakesh@edyoda.com'
+    // pTag.append(text); // <p>rakesh@edyoda.com</p>
+    // userInfo.append(pTag);
     // console.log(pTag)
 
     // console.log(1 + 2); // 3
@@ -42,7 +42,33 @@
 
     // console.log(sum(1, 3));
 
-    
+    // let a = {x: 1}; // a.x
+    // let b = {x: 2};
+    // let c = {x: 3};
+    // let arr = [a, b, c];
+    // // let arr = [{x: 1}, {x: 2}, {x: 3}];
+
+    // arr.forEach((obj) => {
+    //     // obj.x += 1;
+    //     obj.x = obj.x + 1;
+    // });
+
+    // console.log(a.x, b.x, c.x);
+
+    // let a = 1; // a.x
+    // let b = 2;
+    // let c = 3;
+    // let arr = [a, b, c];
+
+    // arr.forEach((x) => {
+    //     // obj.x += 1;
+    //    x += 1;
+    // });
+
+    // console.log(a, b, c);
+
+
+    const 
   </script>
 </script>
 </body>
