--- a/FSR310323/HTML/04-20-practice.html
+++ b/FSR310323/HTML/04-20-practice.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice</title>
+    <title>Practice 🙂</title>
     <style>
       span {
         color: red;
@@ -30,6 +30,13 @@
     <p>H<sub>2</sub>O</p>
 
     <p>My fav topic among <span>HTML, CSS, JS</span> is CSS.</p>
+
+    <ul>
+      <li>HTML✅</li>
+      <li>CSS✅</li>
+      <li>JS✅</li>
+      <li>PHP</li>
+    </ul>
   </body>
 
 </html>
