--- a/FSR310323/CSS/05-02-position-properties.html
+++ b/FSR310323/CSS/05-02-position-properties.html
@@ -22,8 +22,8 @@
       }
 
       div {
-        background-color: blue;
         color: white;
+        background-color: blue;
         width: 20px;
         height: 20px;
         border-radius: 50%;
@@ -34,7 +34,7 @@
       span {
         color: red;
         position: absolute;
-        background-color: grey;
+        background-color: black;
         padding: 10px;
         left: 30px;
         top: -20px;
