--- a/FSR310323/CSS/05-04-selectors.html
+++ b/FSR310323/CSS/05-04-selectors.html
@@ -94,10 +94,11 @@
 
       a {
         text-decoration-color: red;
+        text-decoration: none;
       }
 
       a:hover {
-        text-decoration: none;
+        text-decoration: underline;
       }
 
       #main {
