--- a/FSR310323/CSS/pricing-plan/index.html
+++ b/FSR310323/CSS/pricing-plan/index.html
@@ -6,153 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing Plan</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <style>
-      /* *********** */
-      /* common */
-      /* *********** */
-      * {
-        box-sizing: border-box;
-      }
-
-      body,
-      ul {
-        margin: 0;
-      }
-
-      .container {
-        /* background-color: yellow; */
-        max-width: 1000px;
-        margin: 0 auto;
-        padding: 0 30px;
-      }
-
-      /* *********** */
-      /* pricing plan */
-      /* *********** */
-      main {
-        padding: 100px 0;
-        background-color: #f5f5f5;
-        text-align: center;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-
-      /* method 1 */
-      /* main h1 {
-	margin: 0 0 15px;
-}
-main h1 + span {
-	display: inline-block;
-	width: 60px;
-	height: 4px;
-	background-color: orange;
-	margin-bottom: 80px;
-} */
-
-      /* method 2 */
-      main h1 {
-        margin: 0 0 80px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      main h1 span {
-        display: inline-block;
-        width: 60px;
-        height: 4px;
-        background-color: orange;
-        margin-top: 15px;
-      }
-
-      main .plans {
-        /* background-color: orange; */
-        display: flex;
-        justify-content: space-between;
-      }
-
-      main .plans .plan {
-        /* background-color: yellow; */
-        width: 290px;
-        background-color: white;
-        border: 1px solid rgb(182, 182, 182);
-        border-radius: 8px;
-        overflow: hidden;
-      }
-
-      main .plans .plan h2 {
-        margin: 0;
-        padding: 15px;
-        color: white;
-        font-size: 18px;
-        font-weight: normal;
-      }
-
-      main .plans .plan.basic h2 {
-        background-color: #c25a75;
-      }
-
-      main .plans .plan.standard h2 {
-        background-color: #307aab;
-      }
-
-      main .plans .plan.business h2 {
-        background-color: #53bab5;
-      }
-
-      main .plans .plan .overview {
-        padding: 20px;
-        background-color: #f5f5f5;
-      }
-
-      main .plans .plan .overview .price {
-        /* background-color: yellow; */
-        display: flex;
-        justify-content: center;
-        margin-top: 20px;
-      }
-
-      main .plans .plan .overview .price h3 {
-        margin: 0;
-        margin-right: 15px;
-        font-size: 30px;
-      }
-
-      main .plans .plan .overview .price p {
-        margin: 0;
-        font-size: 14px;
-      }
-
-      main .plans .plan .features {
-        /* background-color: rgb(238, 238, 238); */
-        padding: 30px 20px;
-      }
-
-      main .plans .plan .features ul li {
-        margin-bottom: 15px;
-        text-align: left;
-      }
-
-      main .plans .plan .features ul li:last-child {
-        margin-bottom: 30px;
-      }
-
-      main .plans .plan .features a {
-        padding: 10px 30px;
-        border: 2px solid lightgray;
-        border-radius: 20px;
-        color: black;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-size: 10px;
-      }
-
-      main .plans .plan .features a.active {
-        background-color: orange;
-        color: white;
-        border-color: orange;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
